--- a/codigoFonte/ListagemTV/app/build.gradle
+++ b/codigoFonte/ListagemTV/app/build.gradle
@@ -26,5 +26,22 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.3.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'br.com.livroandroid:android-utils:1.0.5'
+    compile 'com.android.support:design:25.3.0'
+    compile 'com.android.support:support-v4:25.3.0'
+    compile 'com.android.support:recyclerview-v7:25.3.0'
+    compile 'com.android.support:cardview-v7:25.3.0'
+    compile 'com.android.support:preference-v7:25.3.0'
+    compile 'org.parceler:parceler:1.1.6'
+    compile 'org.parceler:parceler-api:1.1.6'
+    //trabalha com imagem
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.squareup:otto:1.3.8'
+    //injencao de depencias para views
+    compile 'com.jakewharton:butterknife:8.5.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
+    //A Callback-Based Http Client
+    compile 'com.loopj.android:android-async-http:1.4.9'
     testCompile 'junit:junit:4.12'
+    compile 'com.google.code.gson:gson:2.8.0'
 }
